--- a/Sung_Alexander_Resume.tex
+++ b/Sung_Alexander_Resume.tex
@@ -43,9 +43,9 @@
 			\begin{flushright}
 				\begin{flushleft}
 					\normalsize\normalfont
-					\textbf{Website:} \url{aleksung.com} \\
+					\textbf{Website:} \url{http://aleksung.com} \\
 					\vspace{0.25em}
-					\textbf{LinkedIn:} \url{www.linkedin.com/in/sungalexander} \\
+					\textbf{LinkedIn:} \url{https://www.linkedin.com/in/sungalexander} \\
 					\vspace{0.25em}
 					\textbf{Github:} \url{https://github.com/asung1372} \\
 				\end{flushleft}
@@ -349,7 +349,7 @@
 \headersection
 
 \gensection{Objective} 
-	Recent graduated, I am seeking an internship or full-time position to develop my skills in creating great application software. I strongly believe in products that are versatile and robust, which ultimately begin with careful architecture and clean code. As a software developer and lifelong learner, I am committed to maintaining familiarity with the latest technologies and best practices.
+	In my final semester of undergrad, I am seeking an internship or full-time position to develop my skills in creating great application software. I strongly believe in products that are versatile and robust, which ultimately begin with careful architecture and clean code. As a software developer and lifelong learner, I am committed to maintaining familiarity with the latest technologies and best practices.
 
 \gensection{Education} %---------------------------------------------------------------
 \educationsection
